<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>org.sirius</groupId>
	<artifactId>sirius</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>sirius</name>
	<description>sirius library</description>
    <packaging>pom</packaging>
	<url/>

	<licenses>
		<license/>
	</licenses>

	<developers>
		<developer/>
	</developers>

    <!-- distributionManagement -->

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub OWNER Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/coolsamson7/dorm</url>
        </repository>
    </distributionManagement>

    <!-- scm -->

    <scm>
        <connection>scm:git:https://github.com/coolsamson7/dorm.git</connection>
        <url>scm:git:https://github.com/coolsamson7/dorm.git</url>
        <developerConnection>scm:git:https://github.com/coolsamson7/dorm.git</developerConnection>


        <!--connection>scm:git:git@github.com:coolsamson7/dorm</connection>
        <developerConnection>scm:git:git@github.com:coolsamson7/dorm</developerConnection-->
        <tag>HEAD</tag>
    </scm>

    <properties>
		<java.version>17</java.version>
		<kotlin.version>1.9.25</kotlin.version>

        <additionalJOption>-Xdoclint:none</additionalJOption>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.source.encoding>UTF-8</project.source.encoding>
	</properties>

	<dependencies>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- kotlin -->

            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-reflect</artifactId>
                <version>${kotlin.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-stdlib</artifactId>
                <version>${kotlin.version}</version>
            </dependency>

            <!--dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-stdlib-jdk8</artifactId>
                <version>${kotlin.version}</version>
            </dependency-->

            <!-- test -->

            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-test-junit5</artifactId>
                <version>${kotlin.version}</version>
                <scope>test</scope>
            </dependency>

            <!--dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-suite-engine</artifactId>
                <version>1.11.0</version>
                <scope>test</scope>
            </dependency-->
        </dependencies>
    </dependencyManagement>

    <!-- build -->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jetbrains.dokka</groupId>
                <artifactId>dokka-maven-plugin</artifactId>
                <version>1.9.0</version>
                <executions>
                    <execution>
                        <phase>pre-site</phase>
                        <goals>
                            <goal>dokka</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- modules -->

    <modules>
        <module>common</module>
        <module>dorm</module>
    </modules>
</project>
